# bot-rust

./: .env.example  .gitignore  Cargo.toml  README.md  package-lock.json  package.json
crates/bot-bin/: Cargo.toml
crates/bot-bin/src/: main.rs
crates/bot-core/: Cargo.toml
crates/bot-core/src/: lib.rs  orchestrator.rs
crates/bot-core/src/account/: mod.rs  polygon_provider.rs  relayer_service.rs
crates/bot-core/src/config/: mod.rs
crates/bot-core/src/data/: binance.rs  chainlink_anchor.rs  market_discovery.rs  mod.rs  orderbook.rs
crates/bot-core/src/execution/: client.rs  mod.rs  order_executor.rs
crates/bot-core/src/notifications/: mod.rs  telegram_notifier.rs
crates/bot-core/src/settlement/: mod.rs  result_resolver.rs  settlement_service.rs
crates/bot-core/src/storage/: mod.rs  result_logger.rs  trade_logger.rs
crates/bot-core/src/types/: mod.rs
crates/bot-core/src/utils/: logger.rs  mod.rs  network.rs  time.rs
crates/bot-tests/: Cargo.toml
crates/bot-tests/tests/: smoke.rs
docs/: parity-matrix.md
scripts/: bootstrap_env.sh  migrate_env_from_v3.sh  relayer_redeem_safe.cjs
