[workspace]
members = [
  "crates/bot-core",
  "crates/bot-bin",
  "crates/bot-tests",
]
resolver = "2"

[workspace.package]
version = "3.0.0"
edition = "2021"
rust-version = "1.78"

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
hmac = "0.12"
once_cell = "1.20"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "signal", "time", "fs", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.12", features = ["v4", "serde"] }
ethers = { version = "2.0", default-features = false, features = ["rustls"] }
