[package]
name = "bot-bin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "bot-rust"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
dotenvy.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bot-core = { path = "../bot-core" }
